# pyTopoComplexity

./: .gitignore  DEM_preprocessing.ipynb  Example_pycwtmexhat.ipynb  Example_pyfracd.ipynb  Example_pyrugosity.ipynb  Example_pytpi.ipynb  LICENSE.txt  Landlab_simulation.ipynb  MexicanHat_lshl Python.ipynb  MexicanHat_lshl.m  NonlinearDiff_LandLab.ipynb  README-pypi.md  README.md  conv2_mexh_lshl optimized.m  conv2_mexh_lshl.m  environment.yml  gitignore.txt  nonlineardiff_Landlab.ipynb  pyBPI.ipynb  pyFD.ipynb  pyFractalD.ipynb  pyMexicanHat.ipynb  pyMexicanHat_batch.ipynb  pyMexicanHat_chunk.ipynb  pyMexicanHat_chunkIC.ipynb  pyRoughness.ipynb  pyRugosity.ipynb  pyTPI.ipynb  pyTRI.ipynb  pyfracd_example.ipynb  pyproject.toml  pytpi_example.ipynb  setup.py
Example DEM/: Ososlid2014_f_6ftgrid.tif  Ososlid2014_m_6ftgrid.tif
JOSS/: draft-pdf.yml  paper.bib  paper.md  paper.rmd
Original MATLAB Code for Mexhat/: MexicanHat_lshl optimized.m
Original MATLAB code/: MexicanHat_lshl.m
example/: nonlineardiff_LandLab.ipynb  nonlineardiff_Landlab.ipynb  pycwtmexhat_example.ipynb  pyfracd_example.ipynb  pyrugosity_example.ipynb  pytopocomplexity.py  pytpi-example.ipynb  pytpi_example.ipynb
example/ExampleDEM/: Ososlid2014_m_6ftgrid.tif
pytopocomplexity/: __init__.py  pycwtmexhat.py  pyfracd.py  pyrugosity.py  pytpi.py
pytopocomplextiy/: __init__.py  pyfracd.py  pyrugosity.py
