[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pytopocomplexity"
dynamic = ["version"]
description = "A package for topographic complexity analysis"
readme = "README-pypi.md"
authors = [{name = "Larry Syu-Heng Lai", email = "larrysyuhenglai@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.6",
    "rasterio>=1.2",
    "dask>=2021.0",
    "matplotlib>=3.3",
    "tqdm>=4.0",
    "numba>=0.53",
    "statsmodels>=0.12",
    "gdal>=3.9",
    "ipython>=8.14",
    "imageio>=2.11"
]

[project.urls]
repository = "https://github.com/GeoLarryLai/pyTopoComplexity.git"

[tool.setuptools]
packages = {find = {where = ["."], exclude = ["image", "image.*", "examples", "examples.*"]}}